test_suite/alan-2022-examples/failing/006030_mutation.alan
source m begin leave 68 = function b() begin relax end end
